--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
   },
   "engines": {
     "node": ">=4.3.2"
+  },
+  "devDependencies": {
+    "babel-loader": "^7.1.1",
+    "ejs": "^2.5.7",
+    "jquery": "^3.2.1"
   }
 }
